<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.SettingsFragment">
    <PreferenceCategory
        android:title="@string/title_pref_cat_connections">
        <EditTextPreference
            android:dialogTitle="@string/title_pref_mac_address"
            android:key="@string/key_pref_mac_address"
            android:title="@string/title_pref_mac_address"
            android:defaultValue="@string/default_pref_mac_address"
            app:useSimpleSummaryProvider="true"/>
        <EditTextPreference
            android:dialogTitle="@string/title_pref_raspi_name"
            android:key="@string/key_pref_raspi_name"
            android:title="@string/title_pref_raspi_name"
            android:defaultValue="@string/default_pref_raspi_name"
            app:useSimpleSummaryProvider="true"/>
        <EditTextPreference
            android:dialogTitle="@string/title_pref_uuid"
            android:key="@string/key_pref_uuid"
            android:title="@string/title_pref_uuid"
            android:defaultValue="@string/default_pref_uuid"
            app:useSimpleSummaryProvider="true"/>
        <Preference
            android:title="@string/title_pref_apply_connection_changes"
            android:key="@string/key_pref_apply_connection_changes"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/title_pref_cat_inputs">
        <Preference
            android:title="@string/title_pref_measurement_inputs"
            android:summary="@string/sum_pref_measurement_inputs"
            android:fragment="com.bjorn.vanctrl.Fragments.SettingsInputSpecFragment"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/title_pref_cat_ui">
        <Preference
            android:title="@string/title_pref_overview"
            android:summary="@string/sum_pref_overview"
            android:fragment="com.bjorn.vanctrl.Fragments.SettingsOverviewFragment"/>
    </PreferenceCategory>


</androidx.preference.PreferenceScreen>