<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".Fragments.OverviewFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/overviewInp1LabelView"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="start|center"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:text="@string/overview_inp1_title"
                android:textColor="@color/colorText"
                android:background="@color/colorSectionTitleBackground"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/overviewInp1VoltageView"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="start|center"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:textColor="@color/colorText"
                android:drawableLeft="@drawable/ic_flash"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/overviewInp1AmpView"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="start|center"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:textColor="@color/colorText"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/overviewInp1PowerView"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="start|center"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:textColor="@color/colorText"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/overviewSeparator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/overviewInp2LabelView"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="start|center"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:text="@string/overview_inp2_title"
                android:textColor="@color/colorText"
                android:background="@color/colorSectionTitleBackground"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/overviewInp2VoltageView"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="start|center"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/overviewInp2AmpView"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="start|center"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:textColor="@color/colorText"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/overviewInp2PowerView"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="start|center"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:textColor="@color/colorText"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/overviewSeparator2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/overviewInp3LabelView"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="start|center"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:text="@string/overview_inp3_title"
                android:textColor="@color/colorText"
                android:background="@color/colorSectionTitleBackground"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/overviewInp3VoltageView"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="start|center"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/overviewInp3AmpView"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="start|center"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:textColor="@color/colorText"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/overviewInp3PowerView"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="start|center"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:textColor="@color/colorText"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/overviewSeparator3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/overviewTemperatureLabelView"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="start|center"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:text="@string/overview_temperature_title"
                android:textColor="@color/colorText"
                android:background="@color/colorSectionTitleBackground"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/overviewInp4TemperatureView"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="start|center"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:textColor="@color/colorText"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/overviewInp5TemperatureView"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="start|center"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:textColor="@color/colorText"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

</FrameLayout>